--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <script>
             function closePopup() {
-                document.querySelector('.popup').style.display = 'none';
+                document.querySelector('.popup').style.display = 'none'; // test de push
             }
         </script>
     </body>
