--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
 
         <div class="popup">
-            <h2><center><a href="Accueil.html"><img src="Logo.png"></a></center></h2>
+            <h2><center><a href="index.html"><img src="Logo.png"></a></center></h2>
             <h1><center>Avez-vous le permis de conduire ?</center></h1>
             <h3><center>GarageRoy est une communauté qui offre du contenu réservé aux titulaire du permis de conduire.</center></h3>
             <h3><center>Vous devez avoir le permis de conduire pour entrer.</center></h3>
