--- a/Accueil.html
+++ b/Accueil.html
@@ -22,6 +22,6 @@
         <H1><center></center></H1>
         <H1 ><a href="Accueil.html"></a><img class="imgpub" src="pub.png"></H1>
         <H1 ><center><a href="Accueil.html"></a><img class="imggarage" src="garage.png"></center></H1>
-        <H1><center>‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾</center></H1>
-        <li><a href="cgu.php"><font color=white>Accueil</font></a></li>
+        <H1><center>‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾</center></H1>
+        <li><a href="cgu.php"><font color=white>Condition générale d'utilisation</font></a></li>
     </body>
