--- a/Accueil.html
+++ b/Accueil.html
@@ -23,5 +23,5 @@
         <H1 ><a href="Accueil.html"></a><img class="imgpub" src="pub.png"></H1>
         <H1 ><center><a href="Accueil.html"></a><img class="imggarage" src="garage.png"></center></H1>
         <H1><center>‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾</center></H1>
-        <li><a href="cgu.php"><font color=white>Condition générale d'utilisation</font></a></li>
+        <h3><center><a href="cgu.php"><font color=white>Condition générale d'utilisation</font></center></a></h3>
     </body>
