--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>GarageRoy - Permis</title>
         <link rel="stylesheet" href="style.css">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <link rel="shortcut icon" href="icon.jpg" type="image/x-icon">
+        <link rel="shortcut icon" href="icon.png" type="image/x-icon">
     </head>
     <body>
 
