--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
                 document.querySelector('.popup').style.display = 'none';
             }
         </script>
+    <h3><center><a href="cgu.php"><font color=white>Condition générale d'utilisation</font></center></a></h3>
     </body>
 </html>
