--- a/Accueil.html
+++ b/Accueil.html
@@ -23,5 +23,5 @@
         <H1 ><a href="Accueil.html"></a><img class="imgpub" src="pub.png"></H1>
         <H1 ><center><a href="Accueil.html"></a><img class="imggarage" src="garage.png"></center></H1>
         <H1><center>‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾</center></H1>
-        <li><a href="cgu.php"><font color=white>Accueil</font></a></li>
+        <a href="cgu.php"><font color=white>Conditions générales d'utilisation</font></a>
     </body>
