--- a/Actu.html
+++ b/Actu.html
@@ -33,8 +33,16 @@
     </br>
     </br>
     </br>
-        <img class="coureurs" src="acturemileon.jpg">
-        <img class="coureurs" src="actumaelfocus.png">
+        <img class="acturemi" src="acturemileon.jpg">
+        <H2 class="acturemitxt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In consequat vestibulum nulla, a rhoncus nisl pharetra quis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sodales odio vel imperdiet condimentum. Aliquam leo diam, pellentesque quis aliquet eu, aliquet et tellus. Donec congue, enim at vulputate pulvinar, leo tortor venenatis neque, et tempor dolor dolor non ex. Aliquam vulputate eleifend sapien, eu luctus libero malesuada vel. Donec id leo ullamcorper, sodales ligula nec, tristique orci.Lorem ipsum dolor sit amet, consectetur adipiscing elit. In consequat vestibulum nulla, a rhoncus nisl pharetra quis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sodales odio vel imperdiet condimentum. Aliquam leo diam, pellentesque quis aliquet eu, aliquet et tellus. Donec congue, enim at vulputate pulvinar, leo tortor venenatis neque, et tempor dolor dolor non ex. Aliquam vulputate eleifend sapien, eu luctus libero malesuada vel. Donec id leo ullamcorper, sodales ligula nec, tristique orci.</H2>
+    </br>
+    </br>
+    </br>
+    </br>   
+
+
+        <img class="actumael" src="actumaelfocus.png">
+        <H2 class="actumaeltxt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In consequat vestibulum nulla, a rhoncus nisl pharetra quis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sodales odio vel imperdiet condimentum. Aliquam leo diam, pellentesque quis aliquet eu, aliquet et tellus. Donec congue, enim at vulputate pulvinar, leo tortor venenatis neque, et tempor dolor dolor non ex. Aliquam vulputate eleifend sapien, eu luctus libero malesuada vel. Donec id leo ullamcorper, sodales ligula nec, tristique orci.Lorem ipsum dolor sit amet, consectetur adipiscing elit. In consequat vestibulum nulla, a rhoncus nisl pharetra quis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sodales odio vel imperdiet condimentum. Aliquam leo diam, pellentesque quis aliquet eu, aliquet et tellus. Donec congue, enim at vulputate pulvinar, leo tortor venenatis neque, et tempor dolor dolor non ex. Aliquam vulputate eleifend sapien, eu luctus libero malesuada vel. Donec id leo ullamcorper, sodales ligula nec, tristique orci.</H2>
         <h3><center><a href="cgu.php"><font color=white>Condition générale d'utilisation</font></center></a></h3>
     </body>
 </html>
